[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SmartSecurityPy"
version = "0.1.0"
description = "ðŸ” Biblioteca de utilidades para hash de senha, criptografia e JWT em Python"
authors = [
  { name="Roberto Lima", email="robertolima.izphera@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
  "passlib[bcrypt]",
  "cryptography",
  "PyJWT"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
keywords = ["seguranca", "criptografia", "jwt", "hash", "senha"]

[project.urls]
Homepage = "https://github.com/robertolima-dev/SmartSecurityPy"
Repository = "https://github.com/robertolima-dev/SmartSecurityPy"
Documentation = "https://pypi.org/project/SmartSecurityPy/"
